# open_kbm

./: Cargo.toml  README.md
crates/capture/: Cargo.toml
crates/capture/examples/: capture.rs
crates/capture/src/: lib.rs  macos.rs
crates/common/: Cargo.toml
crates/common/src/: event.rs  lib.rs
crates/consumer/: Cargo.toml
crates/emulation/: Cargo.toml
crates/emulation/examples/: emulation.rs
crates/emulation/src/: lib.rs  macos.rs  wayland.rs
crates/okbm/: Cargo.toml
crates/okbm-capture/: Cargo.toml
crates/okbm-capture/examples/: capture.rs
crates/okbm-capture/src/: lib.rs  macos.rs  wayland.rs
crates/okbm-common/: Cargo.toml
crates/okbm-common/src/: event.rs
crates/okbm-emulation/: Cargo.toml
crates/okbm-emulation/examples/: emulation.rs
crates/okbm-emulation/src/: lib.rs  macos.rs  wayland.rs
crates/okbm/src/: lib.rs
