[workspace]
members = [
    "crates/okbm-capture",
    "crates/okbm-common",
    "crates/okbm-emulation",
    "crates/okbm",
]
resolver = "3"

[workspace.package]
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
description = "Open Keyboard-Mouse is a keyboard and mouse sharing between computers for Linux and MacOS."
edition = "2024"
homepage = "https://github.com/Hennzau/open_kbm"
keywords = []
readme = "README.md"
rust-version = "1.89.0"
categories = []
documentation = "https://github.com/Hennzau/open_kbm"
license = "MIT"
repository = "https://github.com/Hennzau/open_kbm"
version = "0.1.0"

[workspace.dependencies]
okbm-capture = { version = "0.1.0", path = "crates/okbm-capture" }
okbm-common = { version = "0.1.0", path = "crates/okbm-common" }
okbm-emulation = { version = "0.1.0", path = "crates/okbm-emulation" }

eyre = "0.6"
zenoh = "1.5"

futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }

wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = [
    "client",
    "staging",
    "unstable",
] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }

core-graphics = { version = "0.25.0", features = ["highsierra"] }
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"

libc = "0.2.155"
keycode = "0.4.0"
bitflags = "2.6.0"

num_enum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }

tempfile = "3.8"

rkyv = "0.8.11"
